--- a/translations/feedback_page.tex/cs.po
+++ b/translations/feedback_page.tex/cs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-10-06 09:47+0000\n"
-"PO-Revision-Date: 2025-09-30 01:09+0200\n"
+"PO-Revision-Date: 2025-10-09 21:45+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: cs\n"
@@ -15,13 +15,12 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"X-Generator: Poedit 3.7\n"
 
 #. type: Plain text
 #: sections/feedback_page.tex:4
-#, fuzzy
-#| msgid "\\addsection{Notes}{\\images/intelligence.png}"
 msgid "\\addsection{Got any feedback?}{\\images/orb_of_the_firmament.png}"
-msgstr "\\addsection{Poznámky}{\\images/intelligence.png}"
+msgstr "\\addsection{Máte zpětnou vazbu?}{\\images/orb_of_the_firmament.png}"
 
 #.  no-check-caps
 #. type: Plain text
@@ -32,16 +31,14 @@ msgid ""
 "there anything that could be improved? The authors would really appreciate "
 "your feedback.  Please reach out using one of the channels below.  Cheers!"
 msgstr ""
+"Doufáme, že jste si tento scénář užili.  Vytvořili jej nadšenci ve svém "
+"volném čase, pro nadšence jako jste vy.  Líbilo se vám to? Bylo něco, co by "
+"se dalo zlepšit? Autoři by opravdu ocenili vaši zpětnou vazbu.  Prosím, "
+"ozvěte se prostřednictvím některého z níže uvedených kanálů.  Diky!"
 
 #. type: multicols
 #: sections/feedback_page.tex:20
-#, fuzzy, no-wrap
-#| msgid ""
-#| "    \\columnbreak\n"
-#| "    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-#| "    Scan to open \\textbf{GitHub} repository. \\\\\n"
-#| "    \\href{\\repourl}{\\repourl}\n"
-#| "  "
+#, no-wrap
 msgid ""
 "{2}\n"
 "  \\bigbreak\n"
@@ -51,42 +48,33 @@ msgid ""
 "  \\href{\\formurl}{https://docs.google.com/forms/...}\n"
 "\n"
 msgstr ""
-"    \\columnbreak\n"
-"    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-"    Naskenuj pro otevření \\textbf{GitHub} repozitáře. \\\\\n"
-"    \\href{\\repourl}{\\repourl}\n"
-"  "
+"{2}\n"
+"  \\bigbreak\n"
+"  \\centering\n"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/form.png} \\\\\n"
+"  Naskenuj pro otevření \\textbf{formuláře pro zpětnou vazbu}.\\\\\n"
+"  \\href{\\formurl}{https://docs.google.com/forms/...}\n"
+"\n"
 
 #. type: multicols
 #: sections/feedback_page.tex:25
-#, fuzzy, no-wrap
-#| msgid ""
-#| "    \\columnbreak\n"
-#| "    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-#| "    Scan to open \\textbf{GitHub} repository. \\\\\n"
-#| "    \\href{\\repourl}{\\repourl}\n"
-#| "  "
+#, no-wrap
 msgid ""
 "  \\columnbreak\n"
 "  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
 "  Scan to join the Heroes III Board Game community \\textbf{Discord} server.\\\\\n"
 "  \\href{\\discordurl}{\\discordurl}"
 msgstr ""
-"    \\columnbreak\n"
-"    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-"    Naskenuj pro otevření \\textbf{GitHub} repozitáře. \\\\\n"
-"    \\href{\\repourl}{\\repourl}\n"
-"  "
+"  \\columnbreak\n"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
+"  Naskenuj pro přidání se ke komunitnímu \\textbf{Discord} serveru hry Heroes III Board Game.\\\\\n"
+"  \\href{\\discordurl}{\\discordurl}"
 
 #. type: center
 #: sections/feedback_page.tex:30
-#, fuzzy
-#| msgid ""
-#| "\\transparent{0.2}{\\includegraphics[width=0.6\\linewidth, "
-#| "keepaspectratio]{\\art/land_mine.png}}"
 msgid ""
 "\\transparent{0.2}{\\includegraphics[width=0.3\\linewidth, keepaspectratio]"
 "{\\art/mirth.png}}"
 msgstr ""
-"\\transparent{0.2}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
-"{\\art/land_mine.png}}"
+"\\transparent{0.2}{\\includegraphics[width=0.3\\linewidth, keepaspectratio]"
+"{\\art/mirth.png}}"
