--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -57,7 +57,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{End of \nth{2} Round:}
 \begin{itemize}
-  \item Each player may resolve all the Fields that their closest starting player visited this Round. (Do not increase any income.)
+  \item Each player may resolve all the Fields their closest starting player visited this Round. (Do not increase any income.)
 \end{itemize}
 \textbf{\nth{5} Round:}
 \begin{itemize}
@@ -65,15 +65,15 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \end{itemize}
 \textbf{\nth{7} Round:}
 \begin{itemize}
-  \item Each player may recruit one Neutral \silver\ Unit of the their closest starting player's Faction for half its recruitment cost.
+  \item Each player may recruit one Neutral \silver\ Unit from their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
-\textbf{\nth{10} Round:}
+\textbf{\nth{9} Round:}
 \begin{itemize}
-  \item Repeat event of Round 5.
+  \item Each player may resolve one field their closest starting player visited this Round. (Do not increase income.)
 \end{itemize}
 \textbf{\nth{11} Round:}
 \begin{itemize}
-  \item Each player may recruit one Neutral \silver\ Unit of the their closest starting player's Faction for half its recruitment cost.
+  \item Repeat event of Round 7.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
