--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -21,7 +21,7 @@ This Scenario plays out over 15 Rounds.
 
 \begin{itemize}
   \item A Pack of chosen \bronze\ Units
-  \item A chosen Neutral \bronze\ Unit of the player's Faction
+  \item A chosen Neutral \bronze\ Unit from the player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:}
