--- a/main_en.tex
+++ b/main_en.tex
@@ -6,15 +6,7 @@
 \usepackage[english]{babel}
 
 \def\sections{sections}
-\def\coopspath{coops}
-\def\coopstitle{Cooperative Scenarios}
-\def\clashpath{clash}
-\def\clashtitle{Clash Scenarios}
-\def\campaignspath{campaigns}
-\def\campaignstitle{Campaigns}
-\def\lang_header_adjustment{0px}
-
-\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
-\newcommand{\pageshorthand}{p.}
 
 \input{metadata.tex}
+
+% TEST_SUBSTRING=This is a community-driven
