--- a/main_pl.tex
+++ b/main_pl.tex
@@ -5,17 +5,7 @@
 \usepackage[polish]{babel}
 
 \def\sections{sections/translated/pl}
-\def\coopspath{coops/translated/pl}
-\def\coopstitle{Tryb Kooperacyjny}
-\def\clashpath{clash/translated/pl}
-\def\clashtitle{Tryb Starcia}
-\def\campaignspath{campaigns/translated/pl}
-\def\campaignstitle{Kampanie}
-\def\lang_header_adjustment{0px}
 
-\newcommand{\documenttitle}{Heroes of Might \& Magic III Fanowska Księga Misji}
-
-\newcommand{\pageshorthand}{p.}
 \newcommand{\dialog}{\noindent\hspace*{0.7em} -- }
 \newcommand{\dialogg}[1]{%
   \noindent%
@@ -26,3 +16,5 @@
 }
 
 \input{metadata.tex}
+
+% TEST_SUBSTRING=Niniejszy projekt jest
