--- a/main_fr.tex
+++ b/main_fr.tex
@@ -4,6 +4,7 @@
 
 % Language setting
 \usepackage[french]{babel}
+\usepackage[T1]{fontenc}
 \frenchsetup{StandardLists=true}  % test to get a proper layout, without french babel messing up with lists
 
 \def\sections{sections/translated/fr}
