--- a/main_de.tex
+++ b/main_de.tex
@@ -5,6 +5,7 @@
 % Language setting
 \usepackage[german]{babel}
 \usepackage[T1]{fontenc}
+\usepackage{fontspec}
 
 \def\sections{sections/translated/de}
 
