--- a/main_en.tex
+++ b/main_en.tex
@@ -3,7 +3,9 @@
 \documentclass[12pt]{article}
 
 % Language setting
+\usepackage[T1]{fontenc}
 \usepackage[english]{babel}
+\usepackage{fontspec}
 
 \def\sections{sections}
 
