--- a/translations/intro_and_toc.tex/ru.po
+++ b/translations/intro_and_toc.tex/ru.po
@@ -21,18 +21,18 @@ msgstr ""
 #: sections/credits.tex:8 sections/intro_and_toc.tex:16
 #: sections/intro_and_toc.tex:21
 msgid "\\bigbreak"
-msgstr ""
+msgstr "\\bigbreak"
 
 #.  !TeX spellcheck = en_US
 #. type: title{#1}
 #: sections/intro_and_toc.tex:3
 msgid "Fan-Made Mission Book"
-msgstr ""
+msgstr "Книга сценариев от сообщества"
 
 #. type: author{#1}
 #: sections/intro_and_toc.tex:6
 msgid "By The Community"
-msgstr ""
+msgstr "Создано сообществом"
 
 #. type: center
 #: sections/intro_and_toc.tex:14
@@ -42,6 +42,10 @@ msgid ""
 "\\hrefwithoutfootnote{\\repourl}{\\StrLeft{\\githubsha}{7}}.  }{ Version "
 "\\input{.version} }"
 msgstr ""
+"\\iftoggle{githubbuild}{ \\getenv[\\githubsha]{GITHUB_SHA} Это "
+"неопубликованная версия, собранная на GitHub из коммита "
+"\\hrefwithoutfootnote{\\repourl}{\\StrLeft{\\githubsha}{7}}.  }{ Версия "
+"\\input{.version} }"
 
 #. type: center
 #: sections/intro_and_toc.tex:19
@@ -63,6 +67,10 @@ msgid ""
 "    \\centering\n"
 "\n"
 msgstr ""
+"{3}\n"
+"    \\bigbreak\n"
+"    \\centering\n"
+"\n"
 
 #. type: multicols
 #: sections/intro_and_toc.tex:29
@@ -73,6 +81,10 @@ msgid ""
 "    \\href{\\formurl}{https://docs.google.com/forms/...}\n"
 "\n"
 msgstr ""
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/form.png} \\\\\n"
+"    Отсканируйте, чтобы открыть \\textbf{форму обратной связи} по сценариям.\\\\\n"
+"    \\href{\\formurl}{https://docs.google.com/forms/...}\n"
+"\n"
 
 #. type: multicols
 #: sections/intro_and_toc.tex:34
@@ -84,6 +96,11 @@ msgid ""
 "    \\href{\\discordurl}{\\discordurl}\n"
 "\n"
 msgstr ""
+"    \\columnbreak\n"
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
+"    Отсканируйте, чтобы присоединиться к \\textbf{Discord} серверу сообщества Heroes III Board Game.\\\\\n"
+"    \\href{\\discordurl}{\\discordurl}\n"
+"\n"
 
 #. type: multicols
 #: sections/intro_and_toc.tex:39
@@ -95,6 +112,11 @@ msgid ""
 "    \\href{\\repourl}{\\repourl}\n"
 "  "
 msgstr ""
+"    \\columnbreak\n"
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+"    Отсканируйте, чтобы открыть репозиторий на \\textbf{GitHub}. \\\\\n"
+"    \\href{\\repourl}{\\repourl}\n"
+"  "
 
 #. type: Plain text
 #: sections/intro_and_toc.tex:53
@@ -104,6 +126,10 @@ msgid ""
 "{\\includegraphics[width=\\paperwidth,height=\\paperheight]{\\layout/"
 "tausta.png}} } }"
 msgstr ""
+"\\iftoggle{noartbackground}{}{ \\AddToHookNext{shipout/background}{ \\put "
+"(0in,-\\paperheight)"
+"{\\includegraphics[width=\\paperwidth,height=\\paperheight]{\\layout/"
+"tausta.png}} } }"
 
 #. type: tikzpicture
 #: sections/intro_and_toc.tex:53
@@ -114,6 +140,10 @@ msgid ""
 "    \\includegraphics[width=1.01\\paperwidth, keepaspectratio]{\\layout/rampart_background.png}\n"
 "  };"
 msgstr ""
+"[remember picture, overlay]\n"
+"  \\node(cover)[anchor=center, yshift=9em] at (current page.south) {\n"
+"    \\includegraphics[width=1.01\\paperwidth, keepaspectratio]{\\layout/rampart_background.png}\n"
+"  };"
 
 #. type: multicols*
 #: sections/intro_and_toc.tex:61
@@ -127,3 +157,10 @@ msgid ""
 "\\includegraphics[width=\\linewidth]{\\art/elf.jpg}\n"
 "\n"
 msgstr ""
+"{2}\n"
+"\\tableofcontents\n"
+"\\vspace*{\\fill}\n"
+"\\columnbreak\n"
+"\\vspace{-3em}\n"
+"\\includegraphics[width=\\linewidth]{\\art/elf.jpg}\n"
+"\n"
