--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -69,7 +69,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \end{itemize}
 \textbf{\nth{9} Round:}
 \begin{itemize}
-  \item Each player may resolve one field their closest starting player visited this Round. (Do not increase any income.)
+  \item Each player may resolve one Field their closest starting player visited this Round. (Do not increase any income.)
 \end{itemize}
 \textbf{\nth{11} Round:}
 \begin{itemize}
