--- a/main_en.tex
+++ b/main_en.tex
@@ -3,18 +3,12 @@
 \documentclass[12pt]{article}
 
 % Language setting
+\usepackage[T1]{fontenc}
 \usepackage[english]{babel}
+\usepackage{fontspec}
 
 \def\sections{sections}
-\def\coopspath{coops}
-\def\coopstitle{Cooperative Scenarios}
-\def\clashpath{clash}
-\def\clashtitle{Clash Scenarios}
-\def\campaignspath{campaigns}
-\def\campaignstitle{Campaigns}
-\def\lang_header_adjustment{0px}
-
-\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
-\newcommand{\pageshorthand}{p.}
 
 \input{metadata.tex}
+
+% TEST_SUBSTRING=This is a community-driven
