--- a/metadata.tex
+++ b/metadata.tex
@@ -1,3 +1,5 @@
+\input{\sections/language_metadata.tex}
+
 % Set page size and margins
 \usepackage[
   a4paper,
@@ -8,10 +10,6 @@
   marginparwidth=1.75cm,
   footskip=2.05cm,
 ]{geometry}
-
-% General language packages
-\usepackage[T1]{fontenc}
-\usepackage{fontspec}
 
 % Useful packages
 \usepackage[export]{adjustbox}
@@ -198,7 +196,7 @@
   BoldItalicFont = *-BoldItalic
 ]
 
-\newcommand{\sectionheadertext}[2][antiquewhite]{
+\providecommand{\sectionheadertext}[2][antiquewhite]{
   \iftoggle{noartbackground}{}{\color{#1}}\MakeUppercase{\textbf{\liberation #2}}
 }
 
@@ -350,7 +348,7 @@
 \definecolor{borderinyellow}{HTML}{B09E69}
 \definecolor{bordermidyellow}{HTML}{6f6749}
 % Create note box
-\newcommand{\notefont}[0]{\liberation\selectfont}
+\providecommand{\notefont}[0]{\liberation\selectfont}
 \newcommand{\note}[2]{
   \begin{tikzpicture}
     \draw (0, 0) node[inner sep=0] {\makebox[\linewidth][c]{\picdims[width=\linewidth]{\linewidth}{#1\baselineskip}{\layout/table-background.jpg}}};
