--- a/main_cs.tex
+++ b/main_cs.tex
@@ -2,23 +2,15 @@
 \documentclass[12pt]{article}
 
 \usepackage[czech]{babel}
+\usepackage[T1]{fontenc}
+\usepackage{fontspec}
 
 \def\sections{sections/translated/cs}
-\def\coopspath{coops/translated/cs}
-\def\coopstitle{Kooperativní Scénáře}
-\def\clashpath{clash/translated/cs}
-\def\clashtitle{Střety}
-\def\campaignspath{campaigns/translated/cs}
-\def\campaignstitle{Kampaně}
-\def\lang_header_adjustment{-6px}
 
-\def\sections{sections/translated/cs}
 \newcommand\subsectionspacing{
   \titlespacing*{\subsection}{0em}{0.9em}{0.2em}
 }
 
-\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
-
-\newcommand{\pageshorthand}{p.}
-
 \input{metadata.tex}
+
+% TEST_SUBSTRING=Toto je komunitní projekt
