--- a/main_de.tex
+++ b/main_de.tex
@@ -4,20 +4,11 @@
 
 % Language setting
 \usepackage[german]{babel}
+\usepackage[T1]{fontenc}
+\usepackage{fontspec}
 
 \def\sections{sections/translated/de}
-\def\coopspath{coops/translated/de}
-\def\coopstitle{Die Kooperativen}
-\def\clashpath{clash/translated/de}
-\def\clashtitle{Die Konflikte}
-\def\campaignspath{campaigns/translated/de}
-\def\campaignstitle{Die Kampagnen}
-\def\lang_header_adjustment{0px}
-
-\newcommand{\documenttitle}{Von Fans erstelltes Heroes of Might \& Magic III Missionsheft}
-
-\newcommand{\pageshorthand}{S.}
-
-\newcommand{\qrgithub}{Link zum \textbf{GitHub} Verzeichnis.}
 
 \input{metadata.tex}
+
+% TEST_SUBSTRING=Dies ist ein Gemeinschaftsprojekt
