--- a/main_fr.tex
+++ b/main_fr.tex
@@ -4,19 +4,12 @@
 
 % Language setting
 \usepackage[french]{babel}
+\usepackage[T1]{fontenc}
+\usepackage{fontspec}
 \frenchsetup{StandardLists=true}  % test to get a proper layout, without french babel messing up with lists
 
 \def\sections{sections/translated/fr}
-\def\coopspath{coops/translated/fr}
-\def\coopstitle{Scénarios Coopératif}
-\def\clashpath{clash/translated/fr}
-\def\clashtitle{Scénario d'affrontement}
-\def\campaignspath{campaigns/translated/fr}
-\def\campaignstitle{Campagne}
-\def\lang_header_adjustment{0px}
-
-\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
-
-\newcommand{\pageshorthand}{p.}
 
 \input{metadata.tex}
+
+% TEST_SUBSTRING=Ceci est un projet communautaire
