Fix drats, add ru to readme, ru cover

--- a/draft-scenarios/drafts.tex
+++ b/draft-scenarios/drafts.tex
@@ -3,11 +3,14 @@
 \documentclass[12pt]{article}
 
 % Language setting
+\usepackage[T1]{fontenc}
 \usepackage[english]{babel}
+\usepackage{fontspec}
 
-\def\lang_header_adjustment{0px}
+\def\sections{sections}
 
-\newcommand{\pageshorthand}{p.}
 \newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Draft Scenarios}
 
 \input{metadata.tex}
+
+% TEST_SUBSTRING=This is a community-driven
