--- a/sections/language_metadata.tex
+++ b/sections/language_metadata.tex
@@ -1,6 +1,6 @@
-\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
+\providecommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
 
-\newcommand{\pageshorthand}{p.}
+\providecommand{\pageshorthand}{p.}
 
 \def\coopspath{coops}
 
