--- a/structure.tex
+++ b/structure.tex
@@ -1,21 +1,21 @@
 \include{\sections/title_page.tex}
 
-\include{\sections/intro_and_toc.tex}
-
-\include{\sections/what_to_play.tex}
-
-\include{coops/main.tex}
-
-\include{clash/main.tex}
-
-\include{\sections/random_scenario.tex}
-
-\include{campaigns/main.tex}
-
-\include{\sections/recommendations.tex}
-
-\include{\sections/credits.tex}
-
-% % \include{\sections/notes.tex}
-
-\include{sections/back_cover.tex}
+% \include{\sections/intro_and_toc.tex}
+%
+% \include{\sections/what_to_play.tex}
+%
+% \include{coops/main.tex}
+%
+% \include{clash/main.tex}
+%
+% \include{\sections/random_scenario.tex}
+%
+% \include{campaigns/main.tex}
+%
+% \include{\sections/recommendations.tex}
+%
+% \include{\sections/credits.tex}
+%
+% % % \include{\sections/notes.tex}
+%
+% \include{sections/back_cover.tex}
