--- a/translations/language_metadata.tex/fr.po
+++ b/translations/language_metadata.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-10-13 19:58+0000\n"
+"POT-Creation-Date: 2025-10-14 19:39+0000\n"
 "PO-Revision-Date: 2025-10-13 21:50+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -16,14 +16,16 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#. type: newcommand{#4}
+#. type: Plain text
 #: sections/language_metadata.tex:2
-msgid "Heroes of Might \\& Magic III Fan-Made Mission Book"
+msgid ""
+"\\providecommand{\\documenttitle}{Heroes of Might \\& Magic III Fan-Made "
+"Mission Book}"
 msgstr ""
 
-#. type: newcommand{#4}
+#. type: Plain text
 #: sections/language_metadata.tex:4
-msgid "p."
+msgid "\\providecommand{\\pageshorthand}{p.}"
 msgstr ""
 
 #. type: Plain text
