--- a/translations/language_metadata.tex/ru.po
+++ b/translations/language_metadata.tex/ru.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-10-13 19:58+0000\n"
+"POT-Creation-Date: 2025-10-14 19:39+0000\n"
 "PO-Revision-Date: 2025-10-13 21:50+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -17,15 +17,17 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#. type: newcommand{#4}
+#. type: Plain text
 #: sections/language_metadata.tex:2
-msgid "Heroes of Might \\& Magic III Fan-Made Mission Book"
-msgstr "Heroes of Might \\& Magic III Книга сценариев от сообщества"
+msgid ""
+"\\providecommand{\\documenttitle}{Heroes of Might \\& Magic III Fan-Made "
+"Mission Book}"
+msgstr "\\providecommand{\\documenttitle}{Heroes of Might \\& Magic III Книга сценариев от сообщества}"
 
-#. type: newcommand{#4}
+#. type: Plain text
 #: sections/language_metadata.tex:4
-msgid "p."
-msgstr "стр."
+msgid "\\providecommand{\\pageshorthand}{p.}"
+msgstr "\\providecommand{\\pageshorthand}{стр.}"
 
 #. type: Plain text
 #: sections/language_metadata.tex:6
