Fix: shorten text to fit layout - adjust wording for better line breaks

--- a/translations/what_to_play.tex/ru.po
+++ b/translations/what_to_play.tex/ru.po
@@ -58,7 +58,7 @@ msgid ""
 "Follow these suggestions if you're not sure which Scenario is best for you.\n"
 "\n"
 msgstr ""
-"Воспользуйтесь этими рекомендациями, если вы не уверены, какой Сценарий вам подходит лучше всего.\n"
+"Воспользуйтесь этими рекомендациями, если не уверены в выборе подходящего Сценария.\n"
 "\n"
 
 #. type: multicols
@@ -80,9 +80,9 @@ msgid ""
 "For more tactical play for two players, try \\pagelink{Sentinels}{Sentinels}.\n"
 "\n"
 msgstr ""
-"Если вы новичок в игре и хотите \\textbf{освоить правила}, начните с \\pagelink{Изумрудный остров}{Изумрудного острова}.\n"
-"Для масштабного приключения \\textbf{до 6 игроков} с эпической битвой в финале, попробуйте \\pagelink{Цитадель Титанов}{Цитадель Титанов}.\n"
-"Для тактической игры для двух игроков, попробуйте \\pagelink{Стражи}{Стражей}.\n"
+"Если вы новичок и хотите \\textbf{освоить правила}, начните с \\pagelink{Изумрудный остров}{Изумрудного острова}.\n"
+"Для большого приключения \\textbf{до 6 игроков} с эпической битвой в финале, попробуйте \\pagelink{Цитадель Титанов}{Цитадель Титанов}.\n"
+"Для тактической игры для двух игроков \\pagelink{Стражи}{Стражей}.\n"
 "\n"
 
 #. type: multicols
@@ -146,7 +146,7 @@ msgid ""
 "For information regarding your play time, strategizing, and custom rules, check out \\pagelink{Recommendations}{Recommendations} at the end of this book.\n"
 "\n"
 msgstr ""
-"Для получении информации о времени игры, стратегии и пользовательских правилах, ознакомьтесь \\pagelink{Рекомендации}{Рекомендациями} в конце книги.\n"
+"Для получении информации о времени игры, стратегии и пользовательских правилах, ознакомьтесь с \\pagelink{Рекомендации}{Рекомендациями} в конце книги.\n"
 "\n"
 
 #. type: Plain text
