--- a/translations/what_to_play.tex/ru.po
+++ b/translations/what_to_play.tex/ru.po
@@ -105,7 +105,7 @@ msgid ""
 "\n"
 msgstr ""
 "Если вы ищете Сценарий для 2 или 4 игроков с интересными поворотами сюжета, попробуйте \\pagelink{Кровавый Грааль}{Кровавый Грааль}.\n"
-"Для захватывающей битвы с боссом для 2-3 игроков, выберите \\pagelink{Охота}{Охоту}.\n"
+"Для захватывающей битвы с боссом для 2--3 игроков, выберите \\pagelink{Охота}{Охоту}.\n"
 "Для неизбежной эпической битвы между двумя игроками с возможной осадой, сыграйте в  \\pagelink{Замок Драконьего Проклятия}{Замок Драконьего Проклятия}.\n"
 "\n"
 
