--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -81,7 +81,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up). \textit{Trading Post conversion may be used for this}.
-  \item \textbf{Random Town:} On the next Resource Round, you may recruit one Unit from the defending Faction for free.
+  \item \textbf{Random Town:} On the next Resource Round, you may recruit one Faction Unit from the defending Faction for free.
   \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase all incomes by one space.
   \item Level VII Neutral Combats cannot be skipped.
 \end{itemize}
