--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -63,17 +63,17 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \begin{itemize}
   \item Remove all Black Cubes from the map except from Learning Stones.
 \end{itemize}
-\textbf{\nth{7} Round:}
+\textbf{\nth{6} Round:}
 \begin{itemize}
   \item Each player may recruit one Neutral \silver\ Unit from their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
-\textbf{\nth{9} Round:}
+\textbf{\nth{8} Round:}
 \begin{itemize}
   \item Each player may resolve one Field their closest starting player visited this Round. (Do not increase any income.)
 \end{itemize}
-\textbf{\nth{11} Round:}
+\textbf{\nth{10} Round:}
 \begin{itemize}
-  \item Repeat event of Round 7.
+  \item Repeat the events of Rounds 5 and 6.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
