--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -41,7 +41,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \subsection*{\MakeUppercase{Victory Conditions}}
 The game ends when any of the following conditions are met:
 \begin{itemize}
-  \item One player has defeated each other player's Main Hero once. \textit{That player wins the game immediately}
+  \item One player has defeated each other player's Main Hero once. \textit{That player wins the game immediately.}
   \item At the end of Round 14.
 \end{itemize}
 
@@ -50,7 +50,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \begin{itemize}
   \item 3 VP for winning a Level VII Combat
   \item 2 VP for defeating the closest starting player's Main Hero \textit{Once per Faction.}
-  \item 1 VP for defeating another player's Main Hero {One per enemy.}
+  \item 1 VP for defeating another player's Main Hero \textit{One per enemy.}
   \item 1 VP for possession of the Grail Token
 \end{itemize}
 
