--- a/translations/what_to_play.tex/ru.po
+++ b/translations/what_to_play.tex/ru.po
@@ -82,7 +82,7 @@ msgid ""
 msgstr ""
 "Если вы новичок и хотите \\textbf{освоить правила}, начните с \\pagelink{Изумрудный остров}{Изумрудного острова}.\n"
 "Для большого приключения \\textbf{до 6 игроков} с эпической битвой в финале, выберите \\pagelink{Цитадель Титанов}{Цитадель Титанов}.\n"
-"Для тактической игры для двух игроков -- в \\pagelink{Стражи}{Стражей}.\n"
+"Для тактической игры для двух игроков -- \\pagelink{Стражи}{Стражей}.\n"
 "\n"
 
 #. type: multicols
